# rfantasy-bingo-stats

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  author_data_final.csv  bingo_data.ods  bootstrap_author_dupes.py  find_author_place.py  get_card_statistics.py  pre-commit  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: _config.yml  index.md
docs/2022/: anti-hero.md  author-uses-initials.md  award-finalist.md  bipoc-author.md  book-club-or-readalong-book.md  cool-weapon.md  family-matters.md  five-short-stories.md  historical-sff.md  index.md  lgbtqia-list-book.md  mental-health.md  name-in-the-title.md  no-ifs-ands-or-buts.md  non-human-protagonist.md  published-in-2022.md  revolutions-and-rebellions.md  self-published.md  set-in-africa.md  set-in-space.md  shapeshifters.md  stand-alone.md  two-or-more-authors.md  urban-fantasy.md  weird-ecology.md  wibbly-wobbly-timey-wimey.md
docs/2023/: angels-and-demons.md  book-club-or-readalong-book.md  bottom-of-the-tbr.md  coastal-setting.md  druid.md  elemental-magic.md  features-robots.md  five-short-stories.md  horror.md  index.md  magical-realism.md  multiverses.md  mundane-jobs.md  mythical-beasts.md  myths-and-retellings.md  novella.md  poc-author.md  published-in-2023.md  published-in-the-2000s.md  queernorm-setting.md  (+6 more)
process_data/: __main__.py  author_records.py  bingo_stats_rough_draft.md  constants.py  get_data.py  get_matches.py  get_stats.py  git_operations.py  logger.py  process_match.py  resolved_duplicates.json  update_data.py  updated_bingo_data.csv
tests/: test_serde.py
(+207 files in other folders)
