[project]
name = "rfantasy-bingo-stats"
version = "1.0.0"
description = "CLI for cleaning r/fantasy Bingo data and producing statistics"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "gitpython~=3.1",
  "inflect~=7.2",
  "lmfit~=1.2",
  "matplotlib~=3.7",
  "numpy~=1.24",
  "pandas~=2.0",
  "progressbar2~=4.2",
  "pydantic~=2.10",
  "pygithub~=1.58",
  "python-levenshtein==0.26.1",
  "thefuzz==0.22.1",
]

[project.scripts]
clean-data = "rfantasy_bingo_stats.__main__:cli"
find-author-rank = "rfantasy_bingo_stats.scripts.find_author_place:cli"
get-card-stats = "rfantasy_bingo_stats.scripts.get_card_statistics:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8-print>=5.0.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pandas-stubs>=2.0",
    "pylint>=3.3.3",
    "types-requests>=2.32.0.20241016",
]

[tool.mypy]
follow_imports = "silent"
plugins = ['pydantic.mypy']
strict = true
warn_no_return = true
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pylint]
disable = [
  "logging-fstring-interpolation",
  "logging-not-lazy",
]

[tool.black]
line_length = 99

[tool.isort]
profile = "black"
line_length = 99
combine_as_imports = true
force_grid_wrap = 2
